k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miamo
  labels:
    app: miamo
